chore: CAS-154 delete deposit
